--- a/app/javascript/styles/foresdon/variables.scss
+++ b/app/javascript/styles/foresdon/variables.scss
@@ -3,3 +3,4 @@ $foresdon-primary-ui-alpha: 0.75;
 $foresdon-margin-right: 2px;
 $foresdon-margin-bottom: 3px;
 $foresdon-ui-accent-overlay: rgba(16, 0, 8, 0.2);
+$foresdon-ui-marker-color: #ca8f04;
