Add feature to change compose form background depending on the privacy setting
Change color and show icon in the compose form depending on the privacy setting.

- Set background color to yellow and show unlock icon if privacy is set to unlisted.
- Set background color to red and show lock icon if privacy is set to private.
- Set background color to red and show envelope icon if privacy is set to direct.

--- a/app/javascript/styles/mastodon/polls.scss
+++ b/app/javascript/styles/mastodon/polls.scss
@@ -89,6 +89,24 @@
       &:focus {
         border-color: $highlight-text-color;
       }
+
+      &.poll__textinput {
+        &--public {
+          background: $compose-form-public-color;
+        }
+
+        &--unlisted {
+          background: $compose-form-unlisted-color;
+        }
+
+        &--private {
+          background: $compose-form-private-color;
+        }
+
+        &--direct {
+          background: $compose-form-direct-color;
+        }
+      }
     }
 
     &.selectable {
@@ -214,6 +232,22 @@
 
       &:focus {
         border-color: $highlight-text-color;
+      }
+
+      &.public {
+        background-color: $compose-form-public-color;
+      }
+
+      &.unlisted{
+        background-color: $compose-form-unlisted-color;
+      }
+
+      &.private {
+        background-color: $compose-form-private-color;
+      }
+
+      &.direct{
+        background-color: $compose-form-direct-color;
       }
     }
   }
