--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -459,6 +459,22 @@
     border: 0;
     outline: 0;
 
+    &--public {
+      background: $compose-form-public-color;
+    }
+
+    &--unlisted {
+      background: $compose-form-unlisted-color;
+    }
+
+    &--private {
+      background: $compose-form-private-color;
+    }
+
+    &--direct {
+      background: $compose-form-direct-color;
+    }
+
     &::placeholder {
       color: $dark-text-color;
     }
@@ -486,6 +502,22 @@
 
     &::-webkit-scrollbar {
       all: unset;
+    }
+
+    background-position: bottom 0px center;
+    background-size: 20%;
+    background-repeat: no-repeat;
+
+    &--unlisted {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) / Add fill color and opacity --><path fill="%23000000" fill-opacity="0.04" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z" /></svg>');
+    }
+
+    &--private {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) / Add fill color and opacity --><path fill="%23000000" fill-opacity="0.04" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"/></svg>');
+    }
+
+    &--direct {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!-- Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) / Add fill color and opacity --><path fill="%23000000" fill-opacity="0.04" d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"/></svg>');
     }
 
     @media screen and (max-width: 600px) {
@@ -582,6 +614,22 @@
     font-family: inherit;
     font-size: 14px;
     background: $simple-background-color;
+
+    &--public {
+      background: $compose-form-public-color;
+    }
+
+    &--unlisted {
+      background: $compose-form-unlisted-color;
+    }
+
+    &--private {
+      background: $compose-form-private-color;
+    }
+
+    &--direct {
+      background: $compose-form-direct-color;
+    }
 
     .compose-form__upload-wrapper {
       overflow: hidden;
