Add fixed text input form
This feature is intended to be used to pin hashtags when in live commentary timeline, for example.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -445,7 +445,8 @@
   }
 
   .autosuggest-textarea__textarea,
-  .spoiler-input__input {
+  .spoiler-input__input,
+  .fixed-input__input {
     display: block;
     box-sizing: border-box;
     width: 100%;
@@ -489,6 +490,11 @@
   }
 
   .spoiler-input__input {
+    border-radius: 4px;
+  }
+
+  .fixed-input__input {
+    margin-top: 5px;
     border-radius: 4px;
   }
 
